--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
 }
 
 body {
-  font-family: 'Kalam', cursive;
-  background-image: linear-gradient(rgba(231, 43, 247, 0.7), rgba(241, 53, 126, 0.7),rgba(232, 254, 52, 0.72),rgba(94, 244, 159, 0.7));
+  font-family: 'Markazi Text', serif;
+  background-image: linear-gradient(rgba(231, 43, 247, 0.7), rgba(241, 53, 126, 0.7),rgba(232, 254, 52, 0.72),rgba(94, 244, 159, 0.7)), url(https://www.thegreatcourses.com/media/catalog/product/cache/1/image/800x600/0f396e8a55728e79b48334e699243c07/1/8/1810---base_image_4.1424267816.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 100%;
   background-attachment: fixed;
 }
 
@@ -22,6 +22,20 @@ body {
 section.result {
   width: 90%;
   margin: 0 auto;
+}
+
+#myList {
+  width: 60%;
+  margin: 0 auto;
+}
+
+#displayInfo {
+  width: 60%;
+  margin: 0 auto;
+}
+
+#icon {
+  border-radius: 50%;
 }
 
 /* media query for responsive design */
